smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/control/no-newline-after-control.smithy
// Parse error at line 2, column 17 near `$x`: Expected a line break | Model
$version: "2.0" $xyz: "100"
